<?xml version = "1.0" encoding = "utf-8"?>
<resources>

    <string name="app_name">Kesheng scan code</string>
    <string name="action_settings">Settings</string>
    <string name="action_1d">barcode modules set</string>
    <string name="action_reset">Restore Factory Settings</string>
    <string name="action_reset_desc">reset all settings to factory state, clearing the user to set parameters</string>
    <string name="action_datatype">Setting Data Format</string>
    <string name="action_datatype_desc">Set the data format is: barcode data + carriage return line, to facilitate data analysis</string>
    <string name="action_encodingtype">Encoding Type</string>
    <string name="action_encodingtype_desc">Set the qr code decoding encoding type</string>
    <string name="action_encoding_tip">Please select a code type</string>
    <string name="action_setsuccess">Settings success</string>
    <string name="action_2d">Qr modules set</string>
    <string name="exit">Exit</string>
    <string name="open_scan">Scan</string>
    <string name="empty">Empty</string>
    <string name="popup_title">Select</string>
    <string name="popup_message">你确定要退出该界面吗?</string>
    <string name="popup_yes">OK</string>
    <string name="popup_no">Cancel</string>
    
    <string name="hint">也可手动输入</string>
    <string name="inputstor">入库操作</string>
    <string name="outputstor">出库操作</string>
    <string name="stor">本地存储</string>
    <string name="close_scan">关闭扫描</string>
    <string name="netstor">联网存储</string>
    <string name="users">请输入账户</string>
    <string name="password">请输入密码</string>
    <string name="login">联网登录</string>
    <string name="noNetLogin">无网登录</string>
    <string name="autoLogin">自动登录</string>
    <string name="RPW">记住密码</string>
    <string name="networkconnect">数据库连接设置</string>   
    <string name="introduction">简介</string>
    <string name="input">入库</string>
    <string name="sold">售出</string>
    <string name="upload">联网上传</string>
    <string name="infoSure">信息确认</string>
    <string name="pingma">瓶码</string>
    <string name="xiangma">箱码</string>
    <string name="scan">扫码</string>
    <string name="save">保存</string>
    <string name="back">退出</string>
    <string name="upload1">上传</string>
    <string name="soldnum">用户购买瓶数</string>
    <string name="sure">确定</string>   
    <string name="delete">重置</string>
    <string name="boxscan">箱码扫描</string>
    <string name="pingscan">瓶码扫描</string>
    <string name="soldnext">下一步</string>
    <string name="write">手动输码</string>    
    <string name="upload2">上传：</string>
    <string name="path">path</string>    
    <string name="okUpload">确认</string>   
    <string name="print">扫码后此处显示，无法手动输入</string>
    <string name="print2">手动输入后11位箱码序列</string>
    <string name="print3">点击path后得到路径</string>
    <string name="scan_tips">\"将二维码图片对准扫描框即可自动扫描\"</string>
    <string name="developname">克胜集团</string>
    <string name="address">地址：江苏省建湖县盐淮路888号</string>
    <string name="phone">0515-86273928</string>
    <string name="email">E-mail：ab@kesheng.com　</string>
    <string name="website">网址：http://www.kesheng.com/main.html</string>
    <string name="introduct">简介： 江苏克胜集团是一家集科研、制造、国际国内市场一体化的
            以植物保护、生物医药、房地产、农村金融、五星级酒店为主体的涵盖五大产业的国家重点高新技术企业。</string>
    
</resources>
