<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/inputstor"
           android:textColor="#ffffff"
           android:textSize="18sp"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="箱码："
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
          <EditText
            android:id="@+id/et_code1"
            android:hint="@string/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true" />
        </LinearLayout>
        
        <Button
            android:id="@+id/btnOpen1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/open_scan" 
            android:layout_marginTop="5dp" 
            android:textSize="20sp"/>
  
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="horizontal" >
         <Button
            android:id="@+id/netstor1"
            android:layout_width="wrap_content"
            android:layout_height="50dp" 
            android:layout_marginTop="5dp"     
            android:focusable="false"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:text="@string/netstor" 
            android:textSize="20sp"/>
         <Button
            android:id="@+id/emptyBtn1"
            android:layout_marginTop="5dp" 
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:focusable="false"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:text="@string/empty"
            android:textSize="20sp" />
        </LinearLayout>  
      
    </LinearLayout> 
     
</LinearLayout>