<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/bj2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:src="@drawable/output_help">
        </ImageView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bjbutton"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip">

            <TableLayout
                android:id="@+id/pingNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="12dip"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:stretchColumns="0,1,2,3"
                android:shrinkColumns="0,1,2,3"
                android:gravity="center">
                <TableRow>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:text="@string/soldnum"
                        android:gravity="right|center_vertical"
                        android:textColor="#000000"
                        android:textSize="8pt" />
                    <EditText
                        android:id="@+id/SnumIDe2"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/a"
                        android:singleLine="true"
                        android:textSize="5pt"
                        android:gravity="center"
                        android:ems="3"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textCursorDrawable="@null"/>
                    <Button
                        android:id="@+id/sure"
                        android:layout_width="20dp"
                        android:textColor="#000"
                        android:layout_height="match_parent"
                        android:background="@drawable/border2"
                        android:text="@string/sure"
                        android:textSize="7pt"
                    />
                    <TextView
                        android:id="@+id/countping"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="5pt"
                        android:cursorVisible="false"
                        android:background="@drawable/a"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:editable="false"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/SpingIDb2"
                android:layout_width="match_parent"
                android:layout_marginLeft="60dip"
                android:layout_marginRight="60dip"
                android:layout_height="wrap_content"
                android:layout_below="@id/pingNumber"
                android:background="@drawable/border2"
                android:text="@string/pingscan"
                android:textSize="7pt"
                android:textColor="#000000"
                android:layout_marginTop="20dip"
                android:layout_gravity="center" />
            <GridLayout
                android:id="@+id/SpingmaLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="15dip"
                android:layout_below="@id/SpingIDb2">
            </GridLayout>
            <Button
                android:id="@+id/soldnext"
                android:layout_width="match_parent"
                android:layout_marginLeft="60dip"
                android:layout_marginRight="60dip"
                android:layout_height="wrap_content"
                android:layout_below="@id/SpingmaLayout"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border2"
                android:text="@string/soldnext"
                android:textSize="7pt"
                android:textColor="#000000"
                android:layout_marginTop="15dip"
                android:layout_gravity="center" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
